--- a/core/static/css/linearicons.css+font-awesome.min.css+bootstrap.css+magnific-popup.css+nice-select.css+animate.min.css+owl.carousel.css+jquery-ui.css+main.css.pagespeed.cc.uL8vLbbDon.css
+++ b/core/static/css/linearicons.css+font-awesome.min.css+bootstrap.css+magnific-popup.css+nice-select.css+animate.min.css+owl.carousel.css+jquery-ui.css+main.css.pagespeed.cc.uL8vLbbDon.css
@@ -10,7 +10,16 @@
 	font-style: normal;
 }
 
+.authortitle{
+  font-family: 'Varela Round', sans-serif;
+}
 
+
+
+.socialicon{
+  font-size: 20px;
+  margin-right: 5px;
+}
 
 .authform{
   font-size: 20px !important;
