--- a/core/templates/includes/right_part.html
+++ b/core/templates/includes/right_part.html
@@ -99,32 +99,43 @@
     <ul class="social-list">
     <li class="d-flex justify-content-between align-items-center fb">
     <div class="icons d-flex flex-row align-items-center">
-    <i class="fa fa-facebook" aria-hidden="true"></i>
-    <p>983 Bəyənmə</p>
+        <i class="socialicon fa-brands fa-facebook"  aria-hidden="true"></i> 
+           <p>983 Bəyənmə</p>
     </div>
     <a href="#">Səhifəni bəyən</a>
     </li>
     <li class="d-flex justify-content-between align-items-center tw">
     <div class="icons d-flex flex-row align-items-center">
-    <i class="fa fa-twitter" aria-hidden="true"></i>
+        <i class="socialicon fa-brands fa-linkedin" aria-hidden="true"></i>
     <p>983 İzləyici</p>
     </div>
     <a href="#">Bizi izlə</a>
     </li>
     <li class="d-flex justify-content-between align-items-center yt">
     <div class="icons d-flex flex-row align-items-center">
-    <i class="fa fa-youtube-play" aria-hidden="true"></i>
+    <i class="socialicon fa-brands fa-telegram" aria-hidden="true"></i>
     <p>983 Abunəçi</p>
     </div>
     <a href="#">Abunə ol</a>
     </li>
-    <li class="d-flex justify-content-between align-items-center rs">
-    <div class="icons d-flex flex-row align-items-center">
-    <i class="fa fa-rss" aria-hidden="true"></i>
-    <p>983 Abunəçi</p>
-    </div>
-    <a href="#">Abunə ol</a>
-    </li>
+
+    <li class="d-flex justify-content-between align-items-center yt">
+        <div class="icons d-flex flex-row align-items-center">
+            <i class="socialicon fa-brands fa-instagram" aria-hidden="true"></i>
+        <p>983 Abunəçi</p>
+        </div>
+        <a href="#">Abunə ol</a>
+        </li>
+
+    <li class="d-flex justify-content-between align-items-center yt">
+        <div class="icons d-flex flex-row align-items-center">
+            <i class="socialicon fa-brands fa-twitter-square" aria-hidden="true" ></i>
+        <p>983 Abunəçi</p>
+        </div>
+        <a href="#">Abunə ol</a>
+        </li>
+    
+
     </ul>
     </div>
 
