--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,6 +20,8 @@
 
 <title>Isguzar</title>
 <link href="{% static 'css/main.css' %}" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&family=Montserrat:wght@200&family=Roboto+Mono:wght@300&family=Source+Code+Pro:ital,wght@1,300&family=Ubuntu&family=Varela+Round&display=swap" rel="stylesheet">
+
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" > -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
