--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -66,9 +66,10 @@
     </p>
     <div class="col-lg-4 col-md-12 footer-social">
     <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-telegram"></i></a>
+    <a href="#"><i class="fa fa-instagram"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-dribbble"></i></a>
-    <a href="#"><i class="fa fa-behance"></i></a>
     </div>
     </div>
     </div>
