--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -103,7 +103,7 @@
     </ul>
   
     </li>
-    <li><a href="/author">MÜƏLLİFİMİZ OL</a></li>
+    <li><a href="/tobe_author">MÜƏLLİFİMİZ OL</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
 
