--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -29,6 +29,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/author.css' %}">
 <link rel="stylesheet" href="{% static 'css/linearicons.css+font-awesome.min.css+bootstrap.css+magnific-popup.css+nice-select.css+animate.min.css+owl.carousel.css+jquery-ui.css+main.css.pagespeed.cc.uL8vLbbDon.css' %}">
 <body style="display: block;">
 
