--- a/core/templates/author.html
+++ b/core/templates/author.html
@@ -65,6 +65,27 @@
 
 
         </div>
+
+        <nav aria-label="Page navigation example" >
+            <ul class="pagination justify-content-center" >
+                <li class="page-item ">
+                  {% if page_obj.has_previous %}
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" >Previous</a>
+                {% endif %}
+            </li>
+        
+              <li class="page-item"><span class="page-link" >{{ page_obj.number }}</span></li>
+              <span style="margin-right: 7px; margin-left: 7px; margin-top: 5px;">of</span>
+              <li class="page-item"><span class="page-link" >{{ page_obj.paginator.num_pages }}</span></li> 
+              <li class="page-item">
+                {% if page_obj.has_next %}
+        
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                {% endif %}
+        
+              </li>
+            </ul>
+          </nav>
     </main>
 
 </div>
