--- a/core/templates/author_detail.html
+++ b/core/templates/author_detail.html
@@ -69,7 +69,7 @@
             <div class="_post">
                 <div class="_post_body">
                     <a href="#" class="_post_category">{{i.tags}}</a>
-                    <a href="#" class="_post_title"><h3>{{i.title|safe}}</h3></a>
+                    <a href="{{i.get_absolute_url}}" class="_post_title"><h3>{{i.title|safe}}</h3></a>
                     <p class="_post_content">{{i.descrtiption_block|safe|truncatechars:200}}</p>
                     <div class="_post_info">
                         <p class="_author_name"><a href="#">{{i.owner}}</a></p>
@@ -85,10 +85,34 @@
             {% endfor %}
 
         </div>
+        {% if page_obj %}
+
+        <nav aria-label="Page navigation example" style="margin-top: 25px;">
+            <ul class="pagination justify-content-center">
+                <li class="page-item ">
+                  {% if page_obj.has_previous %}
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" >Previous</a>
+                {% endif %}
+            </li>
+        
+              <li class="page-item"><span class="page-link" >{{ page_obj.number }}</span></li>
+              <span style="margin-right: 7px; margin-left: 7px; margin-top: 5px;">of</span>
+              <li class="page-item"><span class="page-link" >{{ page_obj.paginator.num_pages }}</span></li> 
+              <li class="page-item">
+                {% if page_obj.has_next %}
+        
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                {% endif %}
+        
+              </li>
+            </ul>
+          </nav>
+          {% endif %}
     </main>
     
     
     </div   >
+
 
 
 
