--- a/contact/templates/tobe_author.html
+++ b/contact/templates/tobe_author.html
@@ -16,7 +16,7 @@
         {% csrf_token %}
 
 
-    <h1 class="authortitle" style="text-align: left; margin-top: 50px; font-size: 60px; margin-bottom: 40px;">Yazarımız ol!</h1>
+    <h1 class="authortitle" style="text-align: left; margin-top: 50px; font-size: 60px; margin-bottom: 40px;">Müəllifimiz ol!</h1>
 
 
 
