--- a/core/static/css/linearicons.css+font-awesome.min.css+bootstrap.css+magnific-popup.css+nice-select.css+animate.min.css+owl.carousel.css+jquery-ui.css+main.css.pagespeed.cc.uL8vLbbDon.css
+++ b/core/static/css/linearicons.css+font-awesome.min.css+bootstrap.css+magnific-popup.css+nice-select.css+animate.min.css+owl.carousel.css+jquery-ui.css+main.css.pagespeed.cc.uL8vLbbDon.css
@@ -13,7 +13,9 @@
 /* .subscribeform{
   color: #0c0c0c !important;
 } */
-
+.subscribeform{
+  color: #000 !important;
+}
 .authortitle{
   font-family: 'Varela Round', sans-serif;
 }
@@ -2682,7 +2684,7 @@ Created:
 $primary-font	: 'Poppins', sans-serif;
 ---------------------------------------------
 
-$primary-color	: #4a9efb;
+$primary-color	: #27aaeb;
 $title-color	: #222222;
 $text-color		: #777777;
 
@@ -2696,7 +2698,7 @@ $black			: #222;
 /* =================================== */
 
 ::selection {
-  background-color: #4a9efb;
+  background-color: #27aaeb;
   color: #fff;
 }
 .ali1{
@@ -2779,7 +2781,7 @@ h4, h5, h6 {
   margin-top: 0;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 h1, .h1 {
@@ -2800,7 +2802,7 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 14px;
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 td, th {
@@ -2988,7 +2990,7 @@ header {
 }
 
 .header-top .header-top-left li a:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .header-top .header-top-right {
@@ -3010,7 +3012,7 @@ header {
 }
 
 .header-top .header-top-right li a:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .header-top .header-top-right li a .lnr {
@@ -3209,7 +3211,7 @@ header {
 }
 
 .nav-menu ul li:hover > a {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .nav-menu ul ul {
@@ -3309,7 +3311,7 @@ header {
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 #mobile-body-overly {
@@ -3453,7 +3455,7 @@ body {
 }
 
 .primary-btn {
-  background: #4a9efb;
+  background: #27aaeb;
   line-height: 42px;
   padding-left: 30px;
   padding-right: 30px;
@@ -3506,11 +3508,11 @@ body {
 
 .primary-btn.white:hover {
   background: #fff;
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .primary-btn.white:hover span {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .overlay {
@@ -3571,7 +3573,7 @@ body {
 
 .top-post-area .top-post-left .top-post-details .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -3658,7 +3660,7 @@ body {
 }
 .top-post-area .top-post-right .single-top-post .top-post-details .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -3717,11 +3719,11 @@ body {
 }
 
 .top-post-area .news-tracker-wrap h6 span {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .top-post-area .news-tracker-wrap a {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 /*-------- End top-post Style -------------*/
@@ -3785,7 +3787,7 @@ body {
 
 .latest-post-area .latest-post-wrap .single-latest-post .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -3829,7 +3831,7 @@ body {
 }
 
 .latest-post-area .latest-post-wrap .single-latest-post .post-right h4:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 @media (max-width: 991px) {
@@ -3903,7 +3905,7 @@ body {
 
 .popular-post-wrap .feature-post .details .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -3983,7 +3985,7 @@ body {
 
 .popular-post-wrap .single-popular-post .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -4024,7 +4026,7 @@ body {
 }
 
 .popular-post-wrap .single-popular-post h4:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .popular-post-wrap .single-popular-post .excert {
@@ -4085,7 +4087,7 @@ body {
 
 .relavent-story-post-wrap .single-relavent-post .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -4129,7 +4131,7 @@ body {
 }
 
 .relavent-story-post-wrap .single-relavent-post .post-right h4:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 @media (max-width: 991px) {
@@ -4203,7 +4205,7 @@ body {
 
 .editors-pick-post .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -4226,7 +4228,7 @@ body {
 }
 
 .editors-pick-post .details h4:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .editors-pick-post .details:hover .feature-img-wrap img {
@@ -4281,7 +4283,7 @@ body {
 }
 
 .editors-pick-post .post-lists .detail h6:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .ads-widget img {
@@ -4298,7 +4300,7 @@ body {
 }
 
 .newsletter-widget .bbtns {
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   font-size: 12px;
   font-weight: 500;
@@ -4389,7 +4391,7 @@ body {
 }
 
 .most-popular-widget .details h6:hover {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .social-network-widget .social-list li {
@@ -4470,7 +4472,7 @@ body {
 /* =================================== */
 .hero-nav-area {
   text-align: center;
-  /* background: #4a9efb; */
+  /* background: #27aaeb; */
   color: #fff;
   padding: 65px 0px;
 }
@@ -4509,7 +4511,7 @@ body {
 
 .load-more .primary-btn:hover {
   color: #fff;
-  background: #4a9efb;
+  background: #27aaeb;
 }
 
 /* =================================== */
@@ -4540,7 +4542,7 @@ body {
 }
 
 .service-area .single-service:hover .icon span {
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
 }
 
@@ -4658,7 +4660,7 @@ body {
 .info-area .single-services .lnr {
   margin-top: 30px;
   font-size: 30px;
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 @media (max-width: 414px) {
@@ -4680,7 +4682,7 @@ body {
 }
 
 .feedback-area .feedback-left .mn-accordion .state-open .accordion-heading {
-  background-color: #4a9efb;
+  background-color: #27aaeb;
 }
 
 .feedback-area .feedback-left .mn-accordion .state-open .accordion-heading h3 {
@@ -4817,7 +4819,7 @@ body {
 }
 
 .testimonial-area .lnr-arrow-up:hover, .testimonial-area .lnr-arrow-down:hover {
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
 }
 
@@ -4847,7 +4849,7 @@ body {
 }
 
 .single-testimonial:hover h4 {
-  color: #4a9efb;
+  color: #27aaeb;
   cursor: pointer;
 }
 
@@ -4911,7 +4913,7 @@ body {
 
 .single-post-wrap .tags li {
   display: inline-block;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   padding: 4px 30px;
   font-weight: 300;
@@ -4947,7 +4949,7 @@ body {
 }
 
 .single-post-wrap blockquote {
-  border-left: 2px solid #4a9efb;
+  border-left: 2px solid #27aaeb;
   padding-left: 20px;
   font-style: italic;
 }
@@ -4969,7 +4971,7 @@ body {
 }
 
 .single-post-wrap .navigation-wrap a:hover {
-  background: #4a9efb;
+  background: #27aaeb;
 }
 
 .single-post-wrap .navigation-wrap .lnr {
@@ -5031,7 +5033,7 @@ body {
 }
 
 .single-post-wrap .comment-sec-area .btn-reply:hover {
-  background-color: #4a9efb;
+  background-color: #27aaeb;
   color: #fff;
 }
 
@@ -5115,8 +5117,8 @@ body {
 
 .comment-form .primary-btn:hover {
   background: transparent;
-  border-color: #4a9efb !important;
-  color: #4a9efb !important;
+  border-color: #27aaeb !important;
+  color: #27aaeb !important;
 }
 
 /*-------- End single post Style -------------*/
@@ -5145,7 +5147,7 @@ body {
 }
 
 .feature-img-thumb .owl-nav .owl-prev:hover .lnr {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .feature-img-thumb .owl-nav .owl-prev .lnr {
@@ -5179,7 +5181,7 @@ body {
 }
 
 .feature-img-thumb .owl-nav .owl-next:hover .lnr {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .feature-img-thumb .owl-nav .owl-next .lnr {
@@ -5280,17 +5282,17 @@ div.thumbnail_container .overlay-bg {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   border-radius: 0 !important;
-  background: #4a9efb;
+  background: #27aaeb;
   color: #fff;
   font-size: 14px;
-  border: 1px solid #4a9efb;
+  border: 1px solid #27aaeb;
   text-transform: uppercase !important;
 }
 
 .contact-page-area .form-area .primary-btn:hover {
   background: transparent;
-  border: 1px solid #4a9efb;
-  color: #4a9efb;
+  border: 1px solid #27aaeb;
+  color: #27aaeb;
 }
 
 @media (max-width: 991px) {
@@ -5318,7 +5320,7 @@ div.thumbnail_container .overlay-bg {
 .contact-page-area .address-wrap .single-contact-address .lnr {
   font-size: 30px;
   font-weight: 500;
-  color: #4a9efb;
+  color: #27aaeb;
   margin-right: 30px;
 }
 
@@ -5387,7 +5389,7 @@ div.thumbnail_container .overlay-bg {
 }
 
 .footer-area .footer-bottom a, .footer-area .footer-bottom span {
-  color: #4a9efb;
+  color: #27aaeb;
 }
 
 .footer-area .footer-bottom span {
@@ -5421,7 +5423,7 @@ div.thumbnail_container .overlay-bg {
 }
 
 .footer-area .footer-bottom .footer-social a:hover {
-  background: #4a9efb;
+  background: #27aaeb;
 }
 
 
