--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -37,7 +37,7 @@
     <h4>İşgüzar</h4>
     <ul>
     <li><a href="#">Haqqımızda</a></li>
-    <li><a href="#">Müəlliflər</a></li>
+    <li><a href="/author">Müəlliflər</a></li>
     <li><a href="#">Əlaqə</a></li>
     <li><a href="#">Reklam</a></li>
     </ul>
@@ -65,11 +65,11 @@
     Bütün müəllif hüquqları qorunur © <script>document.write(new Date().getFullYear());</script> isguzar.az | <i class="fa fa-heart-o" aria-hidden="true"></i>   <a href="#" target="_blank">   </a>
     </p>
     <div class="col-lg-4 col-md-12 footer-social">
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-telegram"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i style="color: white !important;" class="fa fa-facebook"></i></a>
+    <a href="#"><i style="color: white !important;" class="fa fa-linkedin"></i></a>
+    <a href="#"><i style="color: white !important;" class="fa fa-telegram"></i></a>
+    <a href="#"><i style="color: white !important;" class="fa fa-instagram"></i></a>
+    <a href="#"><i style="color: white !important;" class="fa fa-twitter"></i></a>
     </div>
     </div>
     </div>
