--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -74,8 +74,8 @@
       <li><a href="/category/business_news">BİZNES</a></li>
       <li><a href="/category/sciene_and_technology_news">ELM / TEXNOLOGİYA</a></li>
       <li><a href="/category/design_and_innovation_news">DİZAYN / İNNOVASİYA</a></li>
-      <li><a href="/category/art_and_culture_news"> EKOLOJİ</a></li>
-      <li><a href="/category/art_and_culture_news"> HƏFTƏNİN İCMALI</a></li>
+      <li><a href="/category/ecology_news"> EKOLOJİ</a></li>
+      <li><a href="/category/day_of_the_week_news"> HƏFTƏNİN İCMALI</a></li>
 
       </ul>
     
@@ -88,7 +88,9 @@
           <li><a href="/category/human_resources_articles">İNSAN RESUSLARI</a></li>
           <li><a href="/category/logistics_articles"> LOGİSTİKA</a></li>
           <li><a href="/category/health_articles">SAĞLAMLIQ</a></li>
-          <li><a href="/category/brand_stories_articles">UĞUR HEKAYƏLƏRİ</a></li>
+          <li><a href="/category/success_stories_articles">UĞUR HEKAYƏLƏRİ</a></li>
+          <li><a href="/category/book_summary_articles">KİTAB XÜLASƏSİ</a></li>
+
         </ul>
       
         </li>
